fixing decision light visibility

--- a/shared/src/main/resources/css/grid/results.css
+++ b/shared/src/main/resources/css/grid/results.css
@@ -585,7 +585,7 @@ td {
     top: 1vmin;
     right: 2vmin;
     width: 15vw;
-    height: 10vh;
+    height: 2.6em;
     background-color: var(--pageBackgroundColor);
     display: none;
 }
@@ -598,7 +598,6 @@ td {
 }
 
 .breakTime {
-    /* color: #99CCFF; */
     color: var(--breakTimerColor);
 }
 
