--- a/shared/src/main/resources/css/nogrid/results.css
+++ b/shared/src/main/resources/css/nogrid/results.css
@@ -565,7 +565,7 @@ td {
     top: 1vmin;
     right: 1vmin;
     width: 15vw;
-    height: 10vh;
+    height: 2.6em
     background-color: var(--pageBackgroundColor);
     display: none;
 }
@@ -578,7 +578,6 @@ td {
 }
 
 .breakTime {
-    /* color: #99CCFF; */
     color: var(--breakTimerColor);
 }
 
